# OpenCongress

./: .gitignore  KIRO_USAGE_WRITEUP.md  LICENSE  Quickstart.md  pyproject.toml  requirements.txt
.kiro/hooks/: bill-text-quality-check.md
.kiro/specs/: betting-market-expansion.md  mobile-app-development.md
.kiro/steering/: betting-market-guidelines.md
backend/: .gitignore  background_jobs.py  bill_plain_summarizer.py  bill_rag_embedder.py  bill_text_scraper.py  create_advanced_markets.py  create_sample_bets.py  create_sample_markets.py  gemini_bill_summarizer.py  hierarchical_summarizer.py  improved_bill_analyzer.py  ingest.py  ingest_bills.py  init_betting.py  main.py  package-lock.json  requirements.txt  streaming_pdf_processor.py  test2.py  update_betting_schema.py
backend/api/: dependencies.py
backend/db/: schema.sql
backend/repositories/: bill_repository.py  member_repository.py  vote_repository.py
backend/services/: bill_service.py  member_service.py  vote_service.py
backend/tests/: check_bills.py  check_pdf_size.py  debug_analyzer.py  show_betting_data.py  show_full_summary.py  test_bill_ingest.py  test_improved_large_bill.py  test_improved_summary.py  test_large_bill.py  test_large_bill_summary.py  test_summary_endpoint.py
backend/utils/: api_helpers.py  formatters.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/archive/: AchievementSystem.jsx  BettingMarkets.jsx  BettingPage.jsx  CivicsQuiz.jsx  CreateAdvancedMarket.jsx  CreateMarket.jsx  Learn.jsx  UserProfile.jsx
(+39 files in other folders)
