[project]
name = "opencongress"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "httpx",
    "python-dotenv",
    "asyncpg",
    "pydantic",
    "beautifulsoup4",
    "lxml",
    "pdfplumber",
    "PyMuPDF",
    "openai",
    "requests",
    "google-genai",
    "pgvector",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"